--- a/index.html
+++ b/index.html
@@ -162,8 +162,12 @@
         <div class="col-lg-8">
           <div class="inner-content">
             <figure>
-              <h6 class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Integer posuere erat a ante.</h6>
-              <figcaption><i class="bi bi-dash-lg"> Someone famous in source title</i></figcaption>
+              <blockquote class="blockquote">
+                <p>A well-known quote, contained in a blockquote element.</p>
+              </blockquote>
+              <figcaption class="blockquote-footer">
+                Someone famous in <cite title="Source Title">Source Title</cite>
+              </figcaption>
             </figure>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quo eaque fugiat nobis aliquid recusandae eos, dicta expedita beatae reiciendis sint quae, eveniet iure. Doloremque exercitationem praesentium ducimus nesciunt, laudantium animi saepe fugit in neque ex culpa, recusandae perspiciatis dolorem tempora alias numquam enim maiores inventore et molestiae quasi natus.</p>
           </div>
