--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <div class="inner-content">
             <figure>
               <blockquote class="blockquote">
-                <p>A well-known quote, contained in a blockquote element.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Integer posuere erat a ante.</p>
               </blockquote>
               <figcaption class="blockquote-footer">
                 Someone famous in <cite title="Source Title">Source Title</cite>
